@@ -14,7 +14,9 @@ public class ModTools {
     private static final DeferredRegister<Item> TOOLS = DeferredRegister.create(ForgeRegistries.ITEMS, CrystalTools.MODID);
 
     public static final RegistryObject<Item> CRYSTAL_PICKAXE = TOOLS.register("crystal_pickaxe", () -> new LevelableTool(new Item.Properties().fireResistant().tab(CreativeTabs.CRYSTAL_TOOLS_TAB), BlockTags.MINEABLE_WITH_PICKAXE, "pickaxe"));
-    
+    public static final RegistryObject<Item> CRYSTAL_AXE = TOOLS.register("crystal_axe", () -> new LevelableTool(new Item.Properties().fireResistant().tab(CreativeTabs.CRYSTAL_TOOLS_TAB), BlockTags.MINEABLE_WITH_AXE, "axe"));
+
+
     public static void initTools() {
         TOOLS.register(FMLJavaModLoadingContext.get().getModEventBus());
     }
