@@ -1,6 +1,7 @@
 {
   "item.crystal_tools.crystal": "Crystal",
   "item.crystal_tools.crystal_pickaxe": "Crystal Pickaxe",
+  "item.crystal_tools.crystal_axe": "Crystal Axe",
   "item.crystal_tools.netherite_stick": "Netherite Stick",
   "block.crystal_tools.crystal_ore": "Crystal Ore",
   "block.crystal_tools.crystal_deepslate_ore": "Deepslate Crystal Ore",
