@@ -1,3 +1,5 @@
+----------------------- 0.1.0 Changes -----------------------
+- Fixed tools only having 10 durability (oops)
 ----------------------- 0.0.2 Changes -----------------------
 - Tools can now be repaired at anvil with a crystal item
 - Tools no longer break
